--- a/Shared/Practice6_TimeSeries_Analysis_KK.ipynb
+++ b/Shared/Practice6_TimeSeries_Analysis_KK.ipynb
@@ -85,8 +85,7 @@
     "ExecuteTime": {
      "end_time": "2019-04-07T13:57:07.448879Z",
      "start_time": "2019-04-07T13:56:51.068212Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -2782,8 +2781,7 @@
      "end_time": "2019-04-07T14:02:12.967452Z",
      "start_time": "2019-04-07T14:01:04.948587Z"
     },
-    "code_folding": [],
-    "scrolled": false
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -2836,7 +2834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
@@ -2888,5 +2886,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
