--- a/Shared/Lecture1_DataAnalysisCycle_DataStatistics_KK.ipynb
+++ b/Shared/Lecture1_DataAnalysisCycle_DataStatistics_KK.ipynb
@@ -657,10 +657,10 @@
     "height": "1058px",
     "left": "579px",
     "top": "224px",
-    "width": "443.594px"
+    "width": "492.594px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "toc-autonumbering": true,
   "varInspector": {
