--- a/Shared/Lecture2_Learning_TimeSeries_KK.ipynb
+++ b/Shared/Lecture2_Learning_TimeSeries_KK.ipynb
@@ -1966,10 +1966,10 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "446px"
+    "width": "522px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "toc-autonumbering": true,
   "varInspector": {
