--- a/Shared/Lecture4_Algorithms_TS_NonLinear_Multivariate_KK.ipynb
+++ b/Shared/Lecture4_Algorithms_TS_NonLinear_Multivariate_KK.ipynb
@@ -3439,7 +3439,7 @@
     "width": "256px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "toc-autonumbering": true,
   "varInspector": {
