--- a/Shared/Lecture1_DataAnalysisCycle_DataStatistics_KK.ipynb
+++ b/Shared/Lecture1_DataAnalysisCycle_DataStatistics_KK.ipynb
@@ -660,7 +660,7 @@
     "width": "492.594px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "toc-autonumbering": true,
   "varInspector": {
