--- a/Practice2_Tutorial_Numpy.ipynb
+++ b/Practice2_Tutorial_Numpy.ipynb
@@ -131,8 +131,8 @@
       "[[1. 0. 0.]\n",
       " [0. 1. 0.]\n",
       " [0. 0. 1.]]\n",
-      "[[0.53717965 0.05514045]\n",
-      " [0.21349378 0.17284982]]\n"
+      "[[0.15184718 0.54838015]\n",
+      " [0.75311903 0.32889525]]\n"
      ]
     }
    ],
@@ -168,16 +168,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.33588228 0.19919321]\n",
-      " [0.69168717 0.82957644]]\n",
-      "[[0.07981217+0.j 0.50917084+0.j]\n",
-      " [0.47377187+0.j 0.79997718+0.j]]\n",
+      "[[0.72038126 0.13581294]\n",
+      " [0.7290755  0.89247687]]\n",
+      "[[0.88379784+0.j 0.32741343+0.j]\n",
+      " [0.26558431+0.j 0.8743355 +0.j]]\n",
       "[[0 0]\n",
       " [0 0]]\n",
       "[[ True  True]\n",
       " [ True  True]]\n",
-      "[[0.0810301107209963 0.14266645500945208]\n",
-      " [0.5582235545576801 0.5711996739345325]]\n"
+      "[[0.91699367500707 0.6695660621906848]\n",
+      " [0.1841214730339662 0.0931911999371059]]\n"
      ]
     }
    ],
@@ -588,20 +588,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.03458477  0.80513719 -0.70614005 -0.14913047]\n",
-      " [ 1.2697759  -1.15299305 -0.42870564  0.60443031]\n",
-      " [ 1.39064873 -0.77687379 -0.19196285 -0.70963843]\n",
-      " [ 0.92697859 -0.76739529  1.75966863  0.41248696]]\n",
-      "[[0.         0.80513719 0.         0.        ]\n",
-      " [1.2697759  0.         0.         0.60443031]\n",
-      " [1.39064873 0.         0.         0.        ]\n",
-      " [0.92697859 0.         1.75966863 0.41248696]]\n"
+      "[[ 1.57285632 -0.74975911  1.01052522 -0.11128709]\n",
+      " [-1.59985091 -0.92836754  0.81365947 -0.62043759]\n",
+      " [-1.32212764 -2.13044909  0.40301989  0.38829275]\n",
+      " [-2.19182118  0.09649667 -1.16889098 -1.4226416 ]]\n",
+      "[[1.57285632 0.         1.01052522 0.        ]\n",
+      " [0.         0.         0.81365947 0.        ]\n",
+      " [0.         0.         0.40301989 0.38829275]\n",
+      " [0.         0.09649667 0.         0.        ]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.        , 0.80513719, 0.        , 0.        ]])"
+       "array([[1.57285632, 0.        , 1.01052522, 0.        ]])"
       ]
      },
      "execution_count": 9,
