--- a/Lecture4_Algorithms_TS_NonLinear_Multivariate_KK.ipynb
+++ b/Lecture4_Algorithms_TS_NonLinear_Multivariate_KK.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src='Image/Contents_Part2.png' width='800'></center>"
+    "<center><img src='Image/Contents_Part4.png' width='800'></center>"
    ]
   },
   {
@@ -348,7 +348,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": true
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
    },
    "source": [
     "### ETS(Error/Trend/Seasonal) 알고리즘\n",
