--- a/Lecture1_DataAnalysisCycle_DataStatistics_KK.ipynb
+++ b/Lecture1_DataAnalysisCycle_DataStatistics_KK.ipynb
@@ -41,6 +41,11 @@
    "source": [
     "## 데이터분석 현실 관점에서:\n",
     "\n",
+    "<center><img src='Image/Analysis_Real1.png' width='800'></center>\n",
+    "<center><img src='Image/Analysis_Real2.png' width='800'></center>\n",
+    "\n",
+    "-----\n",
+    "- **데이터분석 현실요약:**\n",
     "> **\"데이터분석 설계(1단계)\"는 \"모델링(2단계)\"보다 훨씬 중요합니다. 그리고 \"분석종료(3단계)\"는 또다른 새로운 시작입니다**\n",
     "> - **예시1)** “퇴사할 사람을 찾아주세요”  vs  “입사할 사람을 찾아주세요“\n",
     "> - **예시2)** “삼성전자 주식을 사야 할까요 말아야 할까요?”  vs  “내일 삼성전자 주식은 얼마일까요?\"\n",
@@ -48,7 +53,8 @@
     "<center><img src='Image/Analysis_Process.png' width='800'></center>\n",
     "\n",
     "-----\n",
-    "> **요구사항(질문) 예시:**\n",
+    "\n",
+    "- **요구사항(질문) 예시:**\n",
     "> - \"아이폰 고객은 왜 갤럭시 고객보다 충성도가 높은지 분석해봐~\" 라고 질문을 다 듣기도/이해하기도/생각하기도 전에 프로젝트가 시작됩니다\n",
     "> - \"AI를 활용해서 생산공정의 이상을 조기 탐지하고 비용을 줄여봐~\" 라고 질문을 다 듣기도/이해하기도/생각하기도 전에 프로젝트가 시작됩니다 \n",
     "> - \"타겟 마케팅을 하기위해 누구한테 프로모션을 해야하는지 알려줘봐~\" 라고 질문을 다 듣기도/이해하기도/생각하기도 전에 프로젝트가 시작됩니다 \n",
