--- a/Practice3_Setting_Analysis_KK.ipynb
+++ b/Practice3_Setting_Analysis_KK.ipynb
@@ -4912,7 +4912,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Understanding: 추출된 패턴이 Y예측에 도움될지 시각적을 확인하기\n",
+    "##### Data Understanding: 추출된 패턴이 Y예측에 도움될지 시각적을 확인하기\n",
     "**1. Import Library**  \n",
     "**2. Data Loading**  [(Data Source and Description)](https://www.kaggle.com/c/bike-sharing-demand/data)  \n",
     "**3. Feature Engineering(Rearrange of Data)**  \n",
