--- a/Practice4_FE_Analysis_KK.ipynb
+++ b/Practice4_FE_Analysis_KK.ipynb
@@ -36,9 +36,7 @@
     }
    ],
    "source": [
-    "!python -m pip install --user --upgrade pip\n",
-    "!pip install xgboost\n",
-    "!pip install lightgbm"
+    "!python -m pip install --user --upgrade pip"
    ]
   },
   {
